{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 96,
  "lineage": "66c7a719-941d-7fb8-85bc-c57e118593ac",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0073f6e6dde0b75f5",
            "arn": "arn:aws:ec2:ap-southeast-2:352515133004:elastic-ip/eipalloc-0073f6e6dde0b75f5",
            "association_id": "eipassoc-0b7ccbd0eebb3b5d2",
            "domain": "vpc",
            "id": "eipalloc-0073f6e6dde0b75f5",
            "network_border_group": "ap-southeast-2",
            "network_interface": "eni-00ad6821db456f996",
            "private_dns": "ip-10-10-1-130.ap-southeast-2.compute.internal",
            "private_ip": "10.10.1.130",
            "public_dns": "ec2-52-63-223-223.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "52.63.223.223",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:352515133004:internet-gateway/igw-01b2e187d9cf37aa4",
            "id": "igw-01b2e187d9cf37aa4",
            "owner_id": "352515133004",
            "tags": {
              "Name": "bksb-staging-igw"
            },
            "tags_all": {
              "Name": "bksb-staging-igw"
            },
            "vpc_id": "vpc-0f0e40356198d127f"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0073f6e6dde0b75f5",
            "association_id": "eipassoc-0b7ccbd0eebb3b5d2",
            "connectivity_type": "public",
            "id": "nat-044f985e1490cf749",
            "network_interface_id": "eni-00ad6821db456f996",
            "private_ip": "10.10.1.130",
            "public_ip": "52.63.223.223",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05f866645907ab27c",
            "tags": {
              "Name": "bksb-staging-nat-gateway"
            },
            "tags_all": {
              "Name": "bksb-staging-nat-gateway"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.nat",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "firewall_to_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0bbe5dbe9fc9f22091080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-044f985e1490cf749",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bbe5dbe9fc9f2209",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat",
            "aws_route_table.firewall",
            "aws_subnet.nat",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "nat_to_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01b2e187d9cf37aa4",
            "id": "r-rtb-06b540ff45c6c28c21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06b540ff45c6c28c2",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.nat",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:352515133004:route-table/rtb-0bbe5dbe9fc9f2209",
            "id": "rtb-0bbe5dbe9fc9f2209",
            "owner_id": "352515133004",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-044f985e1490cf749",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "bksb-staging-firewall-subnet-rt"
            },
            "tags_all": {
              "Name": "bksb-staging-firewall-subnet-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f0e40356198d127f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:352515133004:route-table/rtb-06b540ff45c6c28c2",
            "id": "rtb-06b540ff45c6c28c2",
            "owner_id": "352515133004",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01b2e187d9cf37aa4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "bksb-staging-nat-subnet-rt"
            },
            "tags_all": {
              "Name": "bksb-staging-nat-subnet-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f0e40356198d127f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ae51c11cb52344ec",
            "route_table_id": "rtb-0bbe5dbe9fc9f2209",
            "subnet_id": "subnet-07a143dc659e97603"
          },
          "dependencies": [
            "aws_route_table.firewall",
            "aws_subnet.firewall",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d842482433f999f9",
            "route_table_id": "rtb-06b540ff45c6c28c2",
            "subnet_id": "subnet-05f866645907ab27c"
          },
          "dependencies": [
            "aws_route_table.nat",
            "aws_subnet.nat",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:352515133004:security-group/sg-01f2e331c68cf8a7d",
            "description": "RDS SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01f2e331c68cf8a7d",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds-sg",
            "name_prefix": "",
            "owner_id": "352515133004",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds-sg"
            },
            "tags_all": {
              "Name": "rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f0e40356198d127f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:352515133004:subnet/subnet-07a143dc659e97603",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07a143dc659e97603",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "352515133004",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bksb-staging-firewall-subnet"
            },
            "tags_all": {
              "Name": "bksb-staging-firewall-subnet"
            },
            "vpc_id": "vpc-0f0e40356198d127f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:352515133004:subnet/subnet-05f866645907ab27c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05f866645907ab27c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "352515133004",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bksb-staging-nat-subnet"
            },
            "tags_all": {
              "Name": "bksb-staging-nat-subnet"
            },
            "vpc_id": "vpc-0f0e40356198d127f"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:352515133004:vpc/vpc-0f0e40356198d127f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0a9db75cc472a52c3",
            "default_route_table_id": "rtb-0690812ffd0cd3275",
            "default_security_group_id": "sg-04fa6f6d3cab4e5d3",
            "dhcp_options_id": "dopt-3975025e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f0e40356198d127f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0690812ffd0cd3275",
            "owner_id": "352515133004",
            "tags": {
              "Name": "bksb-staging-vpc"
            },
            "tags_all": {
              "Name": "bksb-staging-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}